atualização perguntas repondidas

--- a/Projeto_POO_2Bimestre_Completo.ipynb
+++ b/Projeto_POO_2Bimestre_Completo.ipynb
@@ -55,9 +55,40 @@
    "execution_count": 1,
    "id": "5721fa89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Ana\n",
+      "Matrícula: 20231001\n",
+      "Nota: 8.5\n",
+      "\n",
+      "Nome: Bruno\n",
+      "Matrícula: 20231002\n",
+      "Nota: 7.9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Desenvolva aqui o código da Parte 1"
+    "class Aluno:\n",
+    "    def __init__(self, nome, matricula, nota):\n",
+    "        self.nome = nome\n",
+    "        self.matricula = matricula\n",
+    "        self.nota = nota\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        print(f\"Nome: {self.nome}\")\n",
+    "        print(f\"Matrícula: {self.matricula}\")\n",
+    "        print(f\"Nota: {self.nota}\")\n",
+    "\n",
+    "aluno1 = Aluno(\"Ana\", \"20231001\", 8.5)\n",
+    "aluno2 = Aluno(\"Bruno\", \"20231002\", 7.9)\n",
+    "\n",
+    "aluno1.exibir_dados()\n",
+    "print()\n",
+    "aluno2.exibir_dados()\n",
+    "\n"
    ]
   },
   {
@@ -73,7 +104,7 @@
     "- Adicionar pelo menos 1 novo atributo e 1 novo método exclusivo na subclasse.\n",
     "- Utilizar `super()` no construtor da subclasse.\n",
     "\n",
-    "**Código:**"
+    "**Código:**\n"
    ]
   },
   {
@@ -81,9 +112,66 @@
    "execution_count": 2,
    "id": "5f456eb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aluno: Lucas\n",
+      "Disciplina: Matemática\n",
+      "Nota: 9.0\n",
+      "Plataforma de estudo: Google Classroom\n",
+      "Aprovado\n",
+      "\n",
+      "Aluno: Fernanda\n",
+      "Disciplina: História\n",
+      "Nota: 6.5\n",
+      "Plataforma de estudo: Moodle\n",
+      "Reprovado\n"
+     ]
+    }
+   ],
    "source": [
-    "# Desenvolva aqui o código da Parte 2"
+    "class SistemaNotas:\n",
+    "    def __init__(self, nome, disciplina, nota):\n",
+    "        self.nome = nome\n",
+    "        self.disciplina = disciplina\n",
+    "        self.nota = nota\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        print(f\"Aluno: {self.nome}\")\n",
+    "        print(f\"Disciplina: {self.disciplina}\")\n",
+    "        print(f\"Nota: {self.nota}\")\n",
+    "\n",
+    "    def verificar_aprovacao(self):\n",
+    "        if self.nota >= 7:\n",
+    "            return \"Aprovado\"\n",
+    "        else:\n",
+    "            return \"Reprovado\"\n",
+    "\n",
+    "    def atualizar_nota(self, nova_nota):\n",
+    "        self.nota = nova_nota\n",
+    "\n",
+    "class AlunoOnline(SistemaNotas):\n",
+    "    def __init__(self, nome, disciplina, nota, plataforma):\n",
+    "        super().__init__(nome, disciplina, nota)\n",
+    "        self.plataforma = plataforma\n",
+    "\n",
+    "    def exibir_plataforma(self):\n",
+    "        print(f\"Plataforma de estudo: {self.plataforma}\")\n",
+    "\n",
+    "aluno1 = AlunoOnline(\"Lucas\", \"Matemática\", 9.0, \"Google Classroom\")\n",
+    "aluno2 = AlunoOnline(\"Fernanda\", \"História\", 6.5, \"Moodle\")\n",
+    "\n",
+    "aluno1.exibir_dados()\n",
+    "aluno1.exibir_plataforma()\n",
+    "print(aluno1.verificar_aprovacao())\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "aluno2.exibir_dados()\n",
+    "aluno2.exibir_plataforma()\n",
+    "print(aluno2.verificar_aprovacao())\n"
    ]
   },
   {
@@ -103,12 +191,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0bdb445e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aluno: Lucas\n",
+      "Disciplina: Matemática\n",
+      "Nota: 9.0\n",
+      "Plataforma de estudo: Google Classroom\n",
+      "Aprovado\n",
+      "\n",
+      "Aluno: Fernanda\n",
+      "Disciplina: História\n",
+      "Nota: 6.5\n",
+      "Plataforma de estudo: Moodle\n",
+      "Reprovado\n",
+      "Nota atual do aluno1: 9.0\n",
+      "Nota atualizada do aluno1: 8.5\n",
+      "Nota inválida. A nota deve estar entre 0 e 10.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Desenvolva aqui o código da Parte 3"
+    "class SistemaNotas:\n",
+    "    def __init__(self, nome, disciplina, nota):\n",
+    "        self.nome = nome\n",
+    "        self.disciplina = disciplina\n",
+    "        self.__nota = nota  # Atributo privado\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        print(f\"Aluno: {self.nome}\")\n",
+    "        print(f\"Disciplina: {self.disciplina}\")\n",
+    "        print(f\"Nota: {self.__nota}\")\n",
+    "\n",
+    "    def verificar_aprovacao(self):\n",
+    "        if self.__nota >= 7:\n",
+    "            return \"Aprovado\"\n",
+    "        else:\n",
+    "            return \"Reprovado\"\n",
+    "\n",
+    "    def atualizar_nota(self, nova_nota):\n",
+    "        if 0 <= nova_nota <= 10:  # Lógica de validação\n",
+    "            self.__nota = nova_nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "    def get_nota(self):\n",
+    "        return self.__nota  # Método 'get' para acessar a nota\n",
+    "\n",
+    "    def set_nota(self, nova_nota):\n",
+    "        if 0 <= nova_nota <= 10:\n",
+    "            self.__nota = nova_nota  # Método 'set' para modificar a nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "\n",
+    "class AlunoOnline(SistemaNotas):\n",
+    "    def __init__(self, nome, disciplina, nota, plataforma):\n",
+    "        super().__init__(nome, disciplina, nota)\n",
+    "        self.plataforma = plataforma\n",
+    "\n",
+    "    def exibir_plataforma(self):\n",
+    "        print(f\"Plataforma de estudo: {self.plataforma}\")\n",
+    "\n",
+    "\n",
+    "aluno1 = AlunoOnline(\"Lucas\", \"Matemática\", 9.0, \"Google Classroom\")\n",
+    "aluno2 = AlunoOnline(\"Fernanda\", \"História\", 6.5, \"Moodle\")\n",
+    "\n",
+    "# Exibindo dados\n",
+    "aluno1.exibir_dados()\n",
+    "aluno1.exibir_plataforma()\n",
+    "print(aluno1.verificar_aprovacao())\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "aluno2.exibir_dados()\n",
+    "aluno2.exibir_plataforma()\n",
+    "print(aluno2.verificar_aprovacao())\n",
+    "\n",
+    "# Usando os métodos get e set\n",
+    "print(f\"Nota atual do aluno1: {aluno1.get_nota()}\")\n",
+    "aluno1.set_nota(8.5)  # Atualizando a nota\n",
+    "print(f\"Nota atualizada do aluno1: {aluno1.get_nota()}\")\n",
+    "\n",
+    "aluno2.set_nota(11)  # Tentando definir uma nota inválida\n"
    ]
   },
   {
@@ -128,12 +298,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "56a4c46a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aluno: Lucas\n",
+      "Disciplina: Matemática\n",
+      "Nota: 9.0\n",
+      "Plataforma de estudo: Google Classroom\n",
+      "\n",
+      "Alunos registrados no banco de dados:\n",
+      "(1, 'Lucas', 'Matemática', 9.0, 'Google Classroom')\n",
+      "\n",
+      "Após excluir o aluno:\n"
+     ]
+    }
+   ],
    "source": [
-    "# Desenvolva aqui o código da Parte 4"
+    "import sqlite3\n",
+    "\n",
+    "class SistemaNotas:\n",
+    "    def __init__(self, nome, disciplina, nota):\n",
+    "        self.nome = nome\n",
+    "        self.disciplina = disciplina\n",
+    "        self.__nota = nota\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        print(f\"Aluno: {self.nome}\")\n",
+    "        print(f\"Disciplina: {self.disciplina}\")\n",
+    "        print(f\"Nota: {self.__nota}\")\n",
+    "\n",
+    "    def verificar_aprovacao(self):\n",
+    "        if self.__nota >= 7:\n",
+    "            return \"Aprovado\"\n",
+    "        else:\n",
+    "            return \"Reprovado\"\n",
+    "\n",
+    "    def atualizar_nota(self, nova_nota):\n",
+    "        if 0 <= nova_nota <= 10:\n",
+    "            self.__nota = nova_nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "    def get_nota(self):\n",
+    "        return self.__nota\n",
+    "\n",
+    "    def set_nota(self, nova_nota):\n",
+    "        if 0 <= nova_nota <= 10:\n",
+    "            self.__nota = nova_nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "    def inserir_bd(self):\n",
+    "        pass  # Método que será sobrescrito pela subclasse\n",
+    "\n",
+    "class AlunoOnline(SistemaNotas):\n",
+    "    def __init__(self, nome, disciplina, nota, plataforma):\n",
+    "        super().__init__(nome, disciplina, nota)\n",
+    "        self.plataforma = plataforma\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        super().exibir_dados()\n",
+    "        print(f\"Plataforma de estudo: {self.plataforma}\")\n",
+    "\n",
+    "    def inserir_bd(self):\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('''\n",
+    "            CREATE TABLE IF NOT EXISTS alunos (\n",
+    "                id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                nome TEXT,\n",
+    "                disciplina TEXT,\n",
+    "                nota REAL,\n",
+    "                plataforma TEXT\n",
+    "            )\n",
+    "        ''')\n",
+    "        cursor.execute('''\n",
+    "            INSERT INTO alunos (nome, disciplina, nota, plataforma)\n",
+    "            VALUES (?, ?, ?, ?)\n",
+    "        ''', (self.nome, self.disciplina, self.get_nota(), self.plataforma))\n",
+    "        conn.commit()\n",
+    "        conn.close()\n",
+    "\n",
+    "    def excluir_bd(self):\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('''\n",
+    "            DELETE FROM alunos WHERE nome = ? AND disciplina = ?\n",
+    "        ''', (self.nome, self.disciplina))\n",
+    "        conn.commit()\n",
+    "        conn.close()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def consultar_bd():\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('SELECT * FROM alunos')\n",
+    "        alunos = cursor.fetchall()\n",
+    "        conn.close()\n",
+    "        return alunos\n",
+    "\n",
+    "# Testando as funcionalidades\n",
+    "aluno1 = AlunoOnline(\"Lucas\", \"Matemática\", 9.0, \"Google Classroom\")\n",
+    "aluno1.exibir_dados()\n",
+    "\n",
+    "# Inserindo no banco de dados\n",
+    "aluno1.inserir_bd()\n",
+    "\n",
+    "# Consultando o banco de dados\n",
+    "alunos = AlunoOnline.consultar_bd()\n",
+    "print(\"\\nAlunos registrados no banco de dados:\")\n",
+    "for aluno in alunos:\n",
+    "    print(aluno)\n",
+    "\n",
+    "# Excluindo o aluno do banco de dados\n",
+    "aluno1.excluir_bd()\n",
+    "print(\"\\nApós excluir o aluno:\")\n",
+    "alunos = AlunoOnline.consultar_bd()\n",
+    "for aluno in alunos:\n",
+    "    print(aluno)\n"
    ]
   },
   {
@@ -153,12 +440,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54b3cdd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exibindo dados do aluno 1:\n",
+      "Aluno: Lucas\n",
+      "Disciplina: Matemática\n",
+      "Nota: 9.0\n",
+      "Plataforma de estudo: Google Classroom\n",
+      "Aprovado: Aprovado\n",
+      "\n",
+      "Exibindo dados do aluno 2:\n",
+      "Aluno: Fernanda\n",
+      "Disciplina: História\n",
+      "Nota: 6.5\n",
+      "Plataforma de estudo: Moodle\n",
+      "Aprovado: Reprovado\n",
+      "\n",
+      "Nota atualizada do aluno 1: 8.5\n",
+      "\n",
+      "Alunos registrados no banco de dados:\n",
+      "(2, 'Lucas', 'Matemática', 8.5, 'Google Classroom')\n",
+      "(3, 'Fernanda', 'História', 6.5, 'Moodle')\n",
+      "\n",
+      "Após excluir o aluno 1:\n",
+      "(3, 'Fernanda', 'História', 6.5, 'Moodle')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Desenvolva aqui o código da Parte 5"
+    "import sqlite3\n",
+    "\n",
+    "# Classe principal que representa o sistema de notas\n",
+    "class SistemaNotas:\n",
+    "    def __init__(self, nome, disciplina, nota):\n",
+    "        \"\"\"\n",
+    "        Construtor da classe principal. Inicializa os atributos básicos do aluno.\n",
+    "        \"\"\"\n",
+    "        self.nome = nome\n",
+    "        self.disciplina = disciplina\n",
+    "        self.__nota = nota  # Atributo privado\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        \"\"\"\n",
+    "        Exibe os dados do aluno: nome, disciplina e nota.\n",
+    "        \"\"\"\n",
+    "        print(f\"Aluno: {self.nome}\")\n",
+    "        print(f\"Disciplina: {self.disciplina}\")\n",
+    "        print(f\"Nota: {self.__nota}\")\n",
+    "\n",
+    "    def verificar_aprovacao(self):\n",
+    "        \"\"\"\n",
+    "        Verifica se o aluno está aprovado ou reprovado com base na nota.\n",
+    "        \"\"\"\n",
+    "        if self.__nota >= 7:\n",
+    "            return \"Aprovado\"\n",
+    "        else:\n",
+    "            return \"Reprovado\"\n",
+    "\n",
+    "    def atualizar_nota(self, nova_nota):\n",
+    "        \"\"\"\n",
+    "        Atualiza a nota do aluno, se a nova nota for válida (entre 0 e 10).\n",
+    "        \"\"\"\n",
+    "        if 0 <= nova_nota <= 10:\n",
+    "            self.__nota = nova_nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "    def get_nota(self):\n",
+    "        \"\"\"\n",
+    "        Retorna a nota do aluno.\n",
+    "        \"\"\"\n",
+    "        return self.__nota\n",
+    "\n",
+    "    def set_nota(self, nova_nota):\n",
+    "        \"\"\"\n",
+    "        Define uma nova nota para o aluno, se for válida.\n",
+    "        \"\"\"\n",
+    "        if 0 <= nova_nota <= 10:\n",
+    "            self.__nota = nova_nota\n",
+    "        else:\n",
+    "            print(\"Nota inválida. A nota deve estar entre 0 e 10.\")\n",
+    "\n",
+    "    def inserir_bd(self):\n",
+    "        \"\"\"\n",
+    "        Método que será sobrescrito pela subclasse. Colocado aqui para manter a estrutura.\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "# Subclasse que herda de SistemaNotas, representando um aluno online\n",
+    "class AlunoOnline(SistemaNotas):\n",
+    "    def __init__(self, nome, disciplina, nota, plataforma):\n",
+    "        \"\"\"\n",
+    "        Construtor da subclasse. Inicializa os atributos do aluno e a plataforma de estudo.\n",
+    "        \"\"\"\n",
+    "        super().__init__(nome, disciplina, nota)\n",
+    "        self.plataforma = plataforma\n",
+    "\n",
+    "    def exibir_dados(self):\n",
+    "        \"\"\"\n",
+    "        Sobrescreve o método exibir_dados da classe principal para incluir a plataforma de estudo.\n",
+    "        \"\"\"\n",
+    "        super().exibir_dados()\n",
+    "        print(f\"Plataforma de estudo: {self.plataforma}\")\n",
+    "\n",
+    "    def inserir_bd(self):\n",
+    "        \"\"\"\n",
+    "        Insere o aluno no banco de dados SQLite.\n",
+    "        \"\"\"\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('''\n",
+    "            CREATE TABLE IF NOT EXISTS alunos (\n",
+    "                id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                nome TEXT,\n",
+    "                disciplina TEXT,\n",
+    "                nota REAL,\n",
+    "                plataforma TEXT\n",
+    "            )\n",
+    "        ''')\n",
+    "        cursor.execute('''\n",
+    "            INSERT INTO alunos (nome, disciplina, nota, plataforma)\n",
+    "            VALUES (?, ?, ?, ?)\n",
+    "        ''', (self.nome, self.disciplina, self.get_nota(), self.plataforma))\n",
+    "        conn.commit()\n",
+    "        conn.close()\n",
+    "\n",
+    "    def excluir_bd(self):\n",
+    "        \"\"\"\n",
+    "        Exclui o aluno do banco de dados com base no nome e disciplina.\n",
+    "        \"\"\"\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('''\n",
+    "            DELETE FROM alunos WHERE nome = ? AND disciplina = ?\n",
+    "        ''', (self.nome, self.disciplina))\n",
+    "        conn.commit()\n",
+    "        conn.close()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def consultar_bd():\n",
+    "        \"\"\"\n",
+    "        Consulta todos os alunos no banco de dados.\n",
+    "        \"\"\"\n",
+    "        conn = sqlite3.connect('sistema_notas.db')\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute('SELECT * FROM alunos')\n",
+    "        alunos = cursor.fetchall()\n",
+    "        conn.close()\n",
+    "        return alunos\n",
+    "\n",
+    "# Testando as funcionalidades do código\n",
+    "\n",
+    "# Criando instâncias de alunos\n",
+    "aluno1 = AlunoOnline(\"Lucas\", \"Matemática\", 9.0, \"Google Classroom\")\n",
+    "aluno2 = AlunoOnline(\"Fernanda\", \"História\", 6.5, \"Moodle\")\n",
+    "\n",
+    "# Exibindo dados dos alunos\n",
+    "print(\"Exibindo dados do aluno 1:\")\n",
+    "aluno1.exibir_dados()\n",
+    "print(f\"Aprovado: {aluno1.verificar_aprovacao()}\")\n",
+    "print()\n",
+    "\n",
+    "print(\"Exibindo dados do aluno 2:\")\n",
+    "aluno2.exibir_dados()\n",
+    "print(f\"Aprovado: {aluno2.verificar_aprovacao()}\")\n",
+    "print()\n",
+    "\n",
+    "# Atualizando nota de um aluno\n",
+    "aluno1.set_nota(8.5)\n",
+    "print(f\"Nota atualizada do aluno 1: {aluno1.get_nota()}\")\n",
+    "print()\n",
+    "\n",
+    "# Inserindo alunos no banco de dados\n",
+    "aluno1.inserir_bd()\n",
+    "aluno2.inserir_bd()\n",
+    "\n",
+    "# Consultando alunos no banco de dados\n",
+    "print(\"Alunos registrados no banco de dados:\")\n",
+    "alunos = AlunoOnline.consultar_bd()\n",
+    "for aluno in alunos:\n",
+    "    print(aluno)\n",
+    "\n",
+    "# Excluindo o aluno 1 do banco de dados\n",
+    "aluno1.excluir_bd()\n",
+    "print(\"\\nApós excluir o aluno 1:\")\n",
+    "alunos = AlunoOnline.consultar_bd()\n",
+    "for aluno in alunos:\n",
+    "    print(aluno)\n"
    ]
   }
  ],
